--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     fetch(versionFileUrl)
       .then(response => response.text())
       .then(version => {
-        const currentVersion = '1'; // Replace this with the version of your website
+        const currentVersion = '0'; // Replace this with the version of your website
         if (version.trim() !== currentVersion) {
           // If versions don't match, refresh the page to update
           location.reload();
@@ -34,6 +34,10 @@
 
   // Call the function to check for updates on page load
   checkForUpdates();
+
+  // Perform checks for updates every 10 seconds
+  const updateInterval = 10000; // 10 seconds in milliseconds
+  setInterval(checkForUpdates, updateInterval);
 </script>
 
 </body>
